@@ -22,7 +22,6 @@ import static org.apache.solr.common.params.CollectionParams.CollectionAction.DE
 import static org.apache.solr.common.params.CollectionParams.CollectionAction.MODIFYCOLLECTION;
 import static org.apache.solr.common.params.CollectionParams.CollectionAction.SPLITSHARD;
 
-import com.google.common.collect.ImmutableSet;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -72,9 +71,9 @@ public class TestLockTree extends SolrTestCaseJ4 {
 
     List<Set<String>> orderOfExecution =
         Arrays.asList(
-            ImmutableSet.of("coll1/shard1/core_node2", "coll2/shard2"),
-            ImmutableSet.of("coll1", "coll2"),
-            ImmutableSet.of("coll1/shard1", "coll2/shard1"));
+            Set.of("coll1/shard1/core_node2", "coll2/shard2"),
+            Set.of("coll1", "coll2"),
+            Set.of("coll1/shard1", "coll2/shard1"));
     lockTree = new LockTree();
     for (int counter = 0; counter < orderOfExecution.size(); counter++) {
       LockTree.Session session = lockTree.getSession();
