@@ -17,8 +17,7 @@
 
 package org.apache.solr.common.cloud;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
+import java.util.List;
 import java.util.Set;
 import org.apache.solr.cloud.SolrCloudTestCase;
 import org.apache.solr.common.cloud.Replica.State;
@@ -50,20 +49,18 @@ public class TestPerReplicaStates extends SolrCloudTestCase {
   public void testEntries() {
     PerReplicaStates entries =
         new PerReplicaStates(
-            "state.json", 0, ImmutableList.of("R1:2:A", "R1:1:A:L", "R1:0:D", "R2:0:D", "R3:0:A"));
+            "state.json", 0, List.of("R1:2:A", "R1:1:A:L", "R1:0:D", "R2:0:D", "R3:0:A"));
     assertEquals(2, entries.get("R1").version);
     entries =
         new PerReplicaStates(
-            "state.json", 0, ImmutableList.of("R1:1:A:L", "R1:2:A", "R2:0:D", "R3:0:A", "R1:0:D"));
+            "state.json", 0, List.of("R1:1:A:L", "R1:2:A", "R2:0:D", "R3:0:A", "R1:0:D"));
     assertEquals(2, entries.get("R1").version);
     assertEquals(2, entries.get("R1").getDuplicates().size());
     Set<String> modified =
         PerReplicaStates.findModifiedReplicas(
             entries,
             new PerReplicaStates(
-                "state.json",
-                0,
-                ImmutableList.of("R1:1:A:L", "R1:2:A", "R2:0:D", "R3:1:A", "R1:0:D")));
+                "state.json", 0, List.of("R1:1:A:L", "R1:2:A", "R2:0:D", "R3:1:A", "R1:0:D")));
     assertEquals(1, modified.size());
     assertTrue(modified.contains("R3"));
     modified =
@@ -72,7 +69,7 @@ public class TestPerReplicaStates extends SolrCloudTestCase {
             new PerReplicaStates(
                 "state.json",
                 0,
-                ImmutableList.of("R1:1:A:L", "R1:2:A", "R2:0:D", "R3:1:A", "R1:0:D", "R4:0:A")));
+                List.of("R1:1:A:L", "R1:2:A", "R2:0:D", "R3:1:A", "R1:0:D", "R4:0:A")));
     assertEquals(2, modified.size());
     assertTrue(modified.contains("R3"));
     assertTrue(modified.contains("R4"));
@@ -80,9 +77,7 @@ public class TestPerReplicaStates extends SolrCloudTestCase {
         PerReplicaStates.findModifiedReplicas(
             entries,
             new PerReplicaStates(
-                "state.json",
-                0,
-                ImmutableList.of("R1:1:A:L", "R1:2:A", "R3:1:A", "R1:0:D", "R4:0:A")));
+                "state.json", 0, List.of("R1:1:A:L", "R1:2:A", "R3:1:A", "R1:0:D", "R4:0:A")));
     assertEquals(3, modified.size());
     assertTrue(modified.contains("R3"));
     assertTrue(modified.contains("R4"));
@@ -93,8 +88,7 @@ public class TestPerReplicaStates extends SolrCloudTestCase {
     String root = "/testReplicaStateOperations";
     cluster.getZkClient().create(root, null, CreateMode.PERSISTENT, true);
 
-    ImmutableList<String> states =
-        ImmutableList.of("R1:2:A", "R1:1:A:L", "R1:0:D", "R3:0:A", "R4:13:A");
+    List<String> states = List.of("R1:2:A", "R1:1:A:L", "R1:0:D", "R3:0:A", "R4:13:A");
 
     for (String state : states) {
       cluster.getZkClient().create(root + "/" + state, null, CreateMode.PERSISTENT, true);
@@ -132,13 +126,13 @@ public class TestPerReplicaStates extends SolrCloudTestCase {
     rs = PerReplicaStatesFetcher.fetch(root, zkStateReader.getZkClient(), null);
     assertEquals(3, rs.states.size());
 
-    ops = PerReplicaStatesOps.flipLeader(ImmutableSet.of("R4", "R3", "R1"), "R4", rs);
+    ops = PerReplicaStatesOps.flipLeader(Set.of("R4", "R3", "R1"), "R4", rs);
     assertEquals(2, ops.ops.size());
     assertEquals(PerReplicaStates.Operation.Type.ADD, ops.ops.get(0).typ);
     assertEquals(PerReplicaStates.Operation.Type.DELETE, ops.ops.get(1).typ);
     ops.persist(root, cluster.getZkClient());
     rs = PerReplicaStatesFetcher.fetch(root, zkStateReader.getZkClient(), null);
-    ops = PerReplicaStatesOps.flipLeader(ImmutableSet.of("R4", "R3", "R1"), "R3", rs);
+    ops = PerReplicaStatesOps.flipLeader(Set.of("R4", "R3", "R1"), "R3", rs);
     assertEquals(4, ops.ops.size());
     ops.persist(root, cluster.getZkClient());
     rs = PerReplicaStatesFetcher.fetch(root, zkStateReader.getZkClient(), null);
